--- a/vistamiscancionesfavoritass.html
+++ b/vistamiscancionesfavoritass.html
@@ -31,7 +31,9 @@
         </nav>
         <section class="sectionimgbajonav">
             <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
-            <span class="estrella-cancion"><i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i></span>
+            <span class="estrella-cancion">
+                <i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
+            </span>
             <article class="lorem">Segundo álbum de estudio de este cuarteto estadounidense que, tras conocerse en la escuela superior de música y saber que tenían gustos similares, iniciaron este proyecto con la idea de crear un nuevo enfoque en el que centrar el metal sinfónico. Mucho más teatral, más cinemático y bebiendo de vertientes musicales tan dispares como el power, death melódico, black, Stoner, doom e incluso música clásica.
             </article>
         </section>
