--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -29,8 +29,8 @@
             <li><a href="vistamiscancionesfavoritass.html">Mis favoritas</a></li>
         </ul>
     </nav>
-    <section class="sectionimgbajonav">
-        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires">
+    <section class="sectionimgbajonav" id="sectionMusicaSonando">
+        <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires" id = 'imgNav'>
         <span class="estrella-cancion">
             <i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
         </span>
@@ -41,7 +41,7 @@
 <section class="cuerpo-principal">
     <section class="albumes">
             <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('destruction');">
                     <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction" />
                 </a>
                 <span class="estrella-album">
@@ -49,7 +49,7 @@
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('archEnemy');">
                     <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy" />
                 </a>
             <span class="estrella-album">
@@ -57,7 +57,7 @@
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html">
+            <a href="vistamusicasonando.html" onclick="handleClickAlbum('megadeth');">
                 <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth" />
             </a>
             <span class="estrella-album">
@@ -65,7 +65,7 @@
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html">
+            <a href="vistamusicasonando.html" onclick="handleClickAlbum('flema');">
                 <img class="img-albumes" src="Img/Flema.jpeg" alt="Flema" />
             </a>
             <span class="estrella-album">
@@ -73,7 +73,7 @@
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html">
+            <a href="vistamusicasonando.html" onclick="handleClickAlbum('hermetica');">
                 <img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica" />
             </a>
             <span class="estrella-album">
@@ -81,7 +81,7 @@
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html">
+            <a href="vistamusicasonando.html" onclick="handleClickAlbum('horcas');">
                 <img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas" />
             </a>
             <span class="estrella-album">
@@ -89,7 +89,7 @@
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html">
+            <a href="vistamusicasonando.html" onclick="handleClickAlbum('rancid');">
                 <img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid" />
             </a>
             <span class="estrella-album">
@@ -97,7 +97,7 @@
             </span>
         </article>
         <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('katalysm');">
                     <img class="img-albumes" src="Img/Kataklysm.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
@@ -105,7 +105,7 @@
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('motorhead');">
                     <img class="img-albumes" src="Img/motorhead.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
@@ -113,7 +113,7 @@
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('nightwish');">
                     <img class="img-albumes" src="Img/Nightwish.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
@@ -121,7 +121,7 @@
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('pantera');">
                     <img class="img-albumes" src="Img/Pantera.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
@@ -129,7 +129,7 @@
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html">
+                <a href="vistamusicasonando.html" onclick="handleClickAlbum('sonataArtica');">
                     <img class="img-albumes" src="Img/Sonata artica.jpg" alt="" />
                 </a>
                 <span class="estrella-album">
@@ -149,5 +149,7 @@
 <script src="./reusables/getNombreUsuario.js"></script>
 <script src="./reusables/cerrarSession.js"></script>
 <script src="./JS/vistapantallaprincipal.js"></script>
+<script type="text/javascript" src="reusables/JS/canciones.js"></script>
+<script src="./JS/musicaSonando.js"></script>
 </body>
 </html>
