cambio para las imagenes en musicasonando

--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -41,96 +41,96 @@
 <section class="cuerpo-principal">
     <section class="albumes">
             <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('destruction');">
-                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="destruction"/>
                 </a>
                 <span class="estrella-album">
                     <i class="fa-regular fa-star fa-2xl" id = "destruction"></i>
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('archEnemy');">
-                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="archEnemy" />
                 </a>
             <span class="estrella-album">
                 <i class="fa-regular fa-star fa-2xl" id = "archEnemy"></i>
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html" onclick="handleClickAlbum('megadeth');">
-                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="megadeth" />
             </a>
             <span class="estrella-album">
                 <i class="fa-regular fa-star fa-2xl" id = "megadeth"></i>
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html" onclick="handleClickAlbum('flema');">
-                <img class="img-albumes" src="Img/Flema.jpeg" alt="Flema" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Flema.jpeg" alt="flema" />
             </a>
             <span class="estrella-album">
                 <i class="fa-regular fa-star fa-2xl" id = "flema"></i>
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html" onclick="handleClickAlbum('hermetica');">
-                <img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Hermetica.jpg" alt="hermetica" />
             </a>
             <span class="estrella-album">
                 <i class="fa-regular fa-star fa-2xl" id = "hermetica"></i>
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html" onclick="handleClickAlbum('horcas');">
-                <img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Horcas.jpg" alt="horcas" />
             </a>
             <span class="estrella-album">
                 <i class="fa-regular fa-star fa-2xl" id = "horcas"></i>
             </span>
         </article>
         <article class="article-img">
-            <a href="vistamusicasonando.html" onclick="handleClickAlbum('rancid');">
-                <img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid" />
+            <a href="vistamusicasonando.html">
+                <img class="img-albumes" src="Img/Rancid.jpeg" alt="rancid" />
             </a>
             <span class="estrella-album">
                 <i class="fa-regular fa-star fa-2xl" id = "rancid"></i>
             </span>
         </article>
         <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('katalysm');">
-                    <img class="img-albumes" src="Img/Kataklysm.jpg" alt="" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Kataklysm.jpg" alt="katalysm" />
                 </a>
                 <span class="estrella-album">
                     <i class="fa-regular fa-star fa-2xl" id = "katalysm"></i>
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('motorhead');">
-                    <img class="img-albumes" src="Img/motorhead.jpg" alt="" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/motorhead.jpg" alt="motorhead" />
                 </a>
                 <span class="estrella-album">
                     <i class="fa-regular fa-star fa-2xl" id = "motorhead"></i>
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('nightwish');">
-                    <img class="img-albumes" src="Img/Nightwish.jpg" alt="" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Nightwish.jpg" alt="nightwish" />
                 </a>
                 <span class="estrella-album">
                     <i class="fa-regular fa-star fa-2xl" id = "nightwish"></i>
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('pantera');">
-                    <img class="img-albumes" src="Img/Pantera.jpg" alt="" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Pantera.jpg" alt="pantera" />
                 </a>
                 <span class="estrella-album">
                     <i class="fa-regular fa-star fa-2xl" id = "pantera"></i>
                 </span>
             </article>
             <article class="article-img">
-                <a href="vistamusicasonando.html" onclick="handleClickAlbum('sonataArtica');">
-                    <img class="img-albumes" src="Img/Sonata artica.jpg" alt="" />
+                <a href="vistamusicasonando.html">
+                    <img class="img-albumes" src="Img/Sonata artica.jpg" alt="sonataArtica" />
                 </a>
                 <span class="estrella-album">
                     <i class="fa-regular fa-star fa-2xl" id = "sonataArtica"></i>
