--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -40,8 +40,8 @@
 	</section>
 	<section class="cuerpo-principal">
 		<section class="albumes">
-			<article>
-				<p id="sinAlbums" class="oculto">No existen albumes favoritos.</p>
+			<article class="oculto">
+				<p id="sinAlbums">No existen albumes favoritos.</p>
 			</article>
 			<article class="article-img oculto">
 				<a href="vistamusicasonando.html">
@@ -95,7 +95,7 @@
 				<a href="vistamusicasonando.html">
 					<img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid">
 				</a>
-				<span class="estrella-album oculto">
+				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="rancid"></i>
 				</span>
 			</article>
