--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -42,7 +42,7 @@
     </section >
     <section class="cuerpo-principal">
         <section class="albumes">
-			<!-- <article class="article-img" id="article-destruction">
+			<article class="article-img" id="article-destruction">
 				<a href="vistamusicasonando.html">
 					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction">
 				</a>
@@ -137,7 +137,7 @@
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="sonataArtica"></i>
 				</span>
-				</article> -->
+				</article>
 		</section>
         <section class="reproductor">
             <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
