--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -10,7 +10,7 @@
 <body class="body">
     <header>
         <form class="buscador"  method="GET">
-            <input class="buscadorinput" type="text" name="q" placeholder="Buscar..." />
+            <input class="buscadorinput" type="text" name="q" id="inputBuscador" placeholder="Buscar..." />
             <input  type="button" value="Buscar" />
         </form>
         <span>
@@ -42,102 +42,102 @@
     </section >
     <section class="cuerpo-principal">
         <section class="albumes">
-			<article class="article-img">
+			<article class="article-img" id="article-destruction">
 				<a href="vistamusicasonando.html">
 					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="destruction"></i>
 				</span>
-			</article>
-			<article class="article-img">
+				</article>
+				<article class="article-img"   id="article-archEnemy">
 				<a href="vistamusicasonando.html">
 					<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="archEnemy"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-megadeth">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="megadeth"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-flema">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Flema.jpeg" alt="Flema">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="flema"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-hermetica">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="hermetica"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-horcas">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="horcas"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-rancid">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="rancid"></i>
 				</span>
-			</article>
-			<article class="article-img">
+				</article>
+				<article class="article-img" id="article-katalysm">
 				<a href="vistamusicasonando.html">
 					<img class="img-albumes" src="Img/Kataklysm.jpg" alt="Katalysm">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="katalysm"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img" id="article-motorhead">
+				<a href="vistamusicasonando.html"  >
 					<img class="img-albumes" src="Img/motorhead.jpg" alt="Motorhead">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="motorhead"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-nightwish">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Nightwish.jpg" alt="Nightwish">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="nightwish"></i>
 				</span>
-			</article>
-			<article class="article-img">
+				</article>
+				<article class="article-img"  id="article-pantera">
 				<a href="vistamusicasonando.html">
-					<img class="img-albumes" src="Img/Pantera.jpg" alt="Panter">
+					<img class="img-albumes" src="Img/Pantera.jpg" alt="Pantera">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="pantera"></i>
 				</span>
-			</article>
-			<article class="article-img">
-				<a href="vistamusicasonando.html">
+				</article>
+				<article class="article-img"  id="article-sonataArtica">
+				<a href="vistamusicasonando.html" >
 					<img class="img-albumes" src="Img/Sonata artica.jpg" alt="Sonata Artica">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="sonataArtica"></i>
 				</span>
-			</article>
+				</article>
 		</section>
         <section class="reproductor">
             <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
@@ -151,6 +151,8 @@
     <script src="./reusables/getNombreUsuario.js"></script>
     <script src="./reusables/cerrarSession.js"></script>
     <script src="./JS/vistapantallaprincipal.js"></script>
+    <script src="./JS/misAlbumes.js"></script>
+    <script src="./JS/vistabuscar.js"></script>
 
 </body>
 </html>
