--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -56,5 +56,14 @@
 <script src="./reusables/getNombreUsuario.js"></script>
 <script src="./reusables/cerrarSession.js"></script>
 
+<dialog id="modal" class="modal">
+    <h2>Datos guardados correctamente</h2>
+    <div class="modalButtons" style=" display: flex; justify-content: space-around">
+        <button id="closeModal" class="close">Cerrar</button>
+        <button id="goHome" class="goHome">Ir al Home</button>
+    </div>
+    
+</dialog>
+
 </body>
 </html>
