--- a/vistapagar.html
+++ b/vistapagar.html
@@ -58,7 +58,7 @@
                         <input type="text" placeholder="ej 123" name="cvc" id="cvc-input"></input>
                     </div>
                     <div class="item-9">
-                        <a href="vistapantallaprincipa.html"><button>Registrarme</button></a>
+                        <a href="vistapantallaprincipa.html"><button>Pagar</button></a>
                     </div>
                     <div class="item-10">
                         <a href="vistapantallaprincipa.html"><button>Cancelar</button></a>
