agrego modal a vista pagar

--- a/vistapagar.html
+++ b/vistapagar.html
@@ -71,5 +71,13 @@
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
     <script src="JS/vistapagar.js"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
+
+    <dialog id="modal" class="modal">
+        <h2 style="width: 250px; text-align: center;">Pago exitoso</h2>
+        <div class="modalButtons" style=" display: flex; justify-content: space-around">
+            <button id="goHome" class="goHome">Ir al Home</button>
+        </div>
+        
+    </dialog>
 </body>
 </html>
