--- a/vistaperfil.html
+++ b/vistaperfil.html
@@ -40,7 +40,7 @@
                     <input type="email" name="email" id="email" placeholder="e-mail">
                 </article>
             </form>
-            <a href="planespremium.html">Premium</a>
+            <a class="linkpremium" href="planespremium.html">Premium</a>
             <a class="eliminarusuario" href="index.html">Eliminar usuario</a>
         </section>
         <section class="botones">
