correcciones en vista pagar, mis Albumes, index...

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <form action =# action="post">
                 <input type="text" name="usuario" id="usuario" placeholder="Coloca tu Usuario">
                 <input type="password" name="contraseña" id="contraseña" placeholder="Aquí tu Contraseña">
-                <input class="boton" type="button" value="Iniciar Sesión" onclick="handleLogin()">
+                <input class="boton" type="button" value="Iniciar Sesión" id="inicSesion" onclick="handleLogin()">
             </form>
             <section class="registro">
                 <p>¿No tienes usuario? </p><a href="vistaregistro.html">Registrarse</a>
