--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -31,8 +31,8 @@
                 <li><a href="vistamiscancionesfavoritass.html">Mis favoritas</a></li>
             </ul>
         </nav>
-        <section class="sectionimgbajonav">
-            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires">
+        <section class="sectionimgbajonav" id="sectionMusicaSonando">
+            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="seven spires" id = 'imgNav'>
 			<span class="estrella-cancion">
 				<i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
 			</span>
@@ -44,7 +44,7 @@
         <section class="albumes">
 			<article class="article-img" id="article-destruction">
 				<a href="vistamusicasonando.html">
-					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="Destruction">
+					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="destruction">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="destruction"></i>
@@ -52,7 +52,7 @@
 				</article>
 				<article class="article-img"   id="article-archEnemy">
 				<a href="vistamusicasonando.html">
-					<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="Arch Enemy">
+					<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="archEnemy">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="archEnemy"></i>
@@ -60,7 +60,7 @@
 				</article>
 				<article class="article-img"  id="article-megadeth">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="Megadeth">
+					<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="megadeth">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="megadeth"></i>
@@ -68,7 +68,7 @@
 				</article>
 				<article class="article-img"  id="article-flema">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Flema.jpeg" alt="Flema">
+					<img class="img-albumes" src="Img/Flema.jpeg" alt="flema">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="flema"></i>
@@ -76,7 +76,7 @@
 				</article>
 				<article class="article-img"  id="article-hermetica">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Hermetica.jpg" alt="Hermetica">
+					<img class="img-albumes" src="Img/Hermetica.jpg" alt="hermetica">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="hermetica"></i>
@@ -84,7 +84,7 @@
 				</article>
 				<article class="article-img"  id="article-horcas">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Horcas.jpg" alt="Horcas">
+					<img class="img-albumes" src="Img/Horcas.jpg" alt="horcas">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="horcas"></i>
@@ -92,7 +92,7 @@
 				</article>
 				<article class="article-img"  id="article-rancid">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Rancid.jpeg" alt="Rancid">
+					<img class="img-albumes" src="Img/Rancid.jpeg" alt="rancid">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="rancid"></i>
@@ -100,7 +100,7 @@
 				</article>
 				<article class="article-img" id="article-katalysm">
 				<a href="vistamusicasonando.html">
-					<img class="img-albumes" src="Img/Kataklysm.jpg" alt="Katalysm">
+					<img class="img-albumes" src="Img/Kataklysm.jpg" alt="katalysm">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="katalysm"></i>
@@ -108,7 +108,7 @@
 				</article>
 				<article class="article-img" id="article-motorhead">
 				<a href="vistamusicasonando.html"  >
-					<img class="img-albumes" src="Img/motorhead.jpg" alt="Motorhead">
+					<img class="img-albumes" src="Img/motorhead.jpg" alt="motorhead">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="motorhead"></i>
@@ -116,7 +116,7 @@
 				</article>
 				<article class="article-img"  id="article-nightwish">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Nightwish.jpg" alt="Nightwish">
+					<img class="img-albumes" src="Img/Nightwish.jpg" alt="nightwish">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="nightwish"></i>
@@ -124,7 +124,7 @@
 				</article>
 				<article class="article-img"  id="article-pantera">
 				<a href="vistamusicasonando.html">
-					<img class="img-albumes" src="Img/Pantera.jpg" alt="Pantera">
+					<img class="img-albumes" src="Img/Pantera.jpg" alt="pantera">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="pantera"></i>
@@ -132,7 +132,7 @@
 				</article>
 				<article class="article-img"  id="article-sonataArtica">
 				<a href="vistamusicasonando.html" >
-					<img class="img-albumes" src="Img/Sonata artica.jpg" alt="Sonata Artica">
+					<img class="img-albumes" src="Img/Sonata artica.jpg" alt="sonataArtica">
 				</a>
 				<span class="estrella-album">
 					<i class="fa-regular fa-star fa-2xl" id="sonataArtica"></i>
@@ -148,6 +148,8 @@
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <script src="./reusables/JS/canciones.js"></script>
+    <script src="./JS/musicaSonando.js"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
     <script src="./reusables/cerrarSession.js"></script>
     <script src="./JS/vistapantallaprincipal.js"></script>
