--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -40,7 +40,9 @@
 </section>
 <section class="cuerpo-principal">
     <section class="albumes">
-		<article class="noContent" id="article-noContent"><h2>Aun no tienes albums favoritos.</h2></article>
+		<article class="article-img" id="article-noContent">
+            <h2>Aun no tienes albums favoritos.</h2>
+        </article>
     </section>
 <section class="reproductor">
     <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
