ultimos cambios para que todo funcione BIEN

--- a/vistabuscar.html
+++ b/vistabuscar.html
@@ -47,7 +47,7 @@
 					<img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="destruction">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="destruction"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Thrash Anthems"></i>
 				</span>
 				</article>
 				<article class="article-img"   id="article-archEnemy">
@@ -55,7 +55,7 @@
 					<img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="archEnemy">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="archEnemy"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Burning Angel"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-megadeth">
@@ -63,7 +63,7 @@
 					<img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="megadeth">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="megadeth"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Countdown to Extinction"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-flema">
@@ -71,7 +71,7 @@
 					<img class="img-albumes" src="Img/Flema.jpeg" alt="flema">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="flema"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Si el placer es un pecado... bienvenidos al infierno"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-hermetica">
@@ -79,7 +79,7 @@
 					<img class="img-albumes" src="Img/Hermetica.jpg" alt="hermetica">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="hermetica"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Acido Argentino"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-horcas">
@@ -87,7 +87,7 @@
 					<img class="img-albumes" src="Img/Horcas.jpg" alt="horcas">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="horcas"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Reviviendo Huestes"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-rancid">
@@ -95,7 +95,7 @@
 					<img class="img-albumes" src="Img/Rancid.jpeg" alt="rancid">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="rancid"></i>
+					<i class="fa-regular fa-star fa-2xl" id="...And out come the wolves"></i>
 				</span>
 				</article>
 				<article class="article-img" id="article-katalysm">
@@ -103,7 +103,7 @@
 					<img class="img-albumes" src="Img/Kataklysm.jpg" alt="katalysm">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="katalysm"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Meditations"></i>
 				</span>
 				</article>
 				<article class="article-img" id="article-motorhead">
@@ -111,7 +111,7 @@
 					<img class="img-albumes" src="Img/motorhead.jpg" alt="motorhead">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="motorhead"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Everything Louder Forever"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-nightwish">
@@ -119,7 +119,7 @@
 					<img class="img-albumes" src="Img/Nightwish.jpg" alt="nightwish">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="nightwish"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Decades"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-pantera">
@@ -127,7 +127,7 @@
 					<img class="img-albumes" src="Img/Pantera.jpg" alt="pantera">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="pantera"></i>
+					<i class="fa-regular fa-star fa-2xl" id="Essentials"></i>
 				</span>
 				</article>
 				<article class="article-img"  id="article-sonataArtica">
@@ -135,7 +135,7 @@
 					<img class="img-albumes" src="Img/Sonata artica.jpg" alt="sonataArtica">
 				</a>
 				<span class="estrella-album">
-					<i class="fa-regular fa-star fa-2xl" id="sonataArtica"></i>
+					<i class="fa-regular fa-star fa-2xl" id="The Collection"></i>
 				</span>
 				</article>
 		</section>
