--- a/vistapantallaprincipa.html
+++ b/vistapantallaprincipa.html
@@ -45,7 +45,7 @@
                     <img class="img-albumes" src="Img/2007 - Thrash Anthems 01.jpg" alt="destruction"/>
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "destruction"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "Thrash Anthems"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -53,7 +53,7 @@
                     <img class="img-albumes" src="Img/Burning Angel (EP).jpg" alt="archEnemy" />
                 </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "archEnemy"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "Burning Angel"></i>
             </span>
         </article>
         <article class="article-img">
@@ -61,7 +61,7 @@
                 <img class="img-albumes" src="Img/Countdown to Extinction.jpg" alt="megadeth" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "megadeth"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "Countdown to Extinction"></i>
             </span>
         </article>
         <article class="article-img">
@@ -69,7 +69,7 @@
                 <img class="img-albumes" src="Img/Flema.jpeg" alt="flema" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "flema"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "Si el placer es un pecado... bienvenidos al infierno"></i>
             </span>
         </article>
         <article class="article-img">
@@ -77,7 +77,7 @@
                 <img class="img-albumes" src="Img/Hermetica.jpg" alt="hermetica" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "hermetica"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "Acido Argentino"></i>
             </span>
         </article>
         <article class="article-img">
@@ -85,7 +85,7 @@
                 <img class="img-albumes" src="Img/Horcas.jpg" alt="horcas" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "horcas"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "Reviviendo Huestes"></i>
             </span>
         </article>
         <article class="article-img">
@@ -93,7 +93,7 @@
                 <img class="img-albumes" src="Img/Rancid.jpeg" alt="rancid" />
             </a>
             <span class="estrella-album">
-                <i class="fa-regular fa-star fa-2xl" id = "rancid"></i>
+                <i class="fa-regular fa-star fa-2xl" id = "...And out come the wolves"></i>
             </span>
         </article>
         <article class="article-img">
@@ -101,7 +101,7 @@
                     <img class="img-albumes" src="Img/Kataklysm.jpg" alt="katalysm" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "katalysm"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "Meditations"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -109,7 +109,7 @@
                     <img class="img-albumes" src="Img/motorhead.jpg" alt="motorhead" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "motorhead"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "Everything Louder Forever"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -117,7 +117,7 @@
                     <img class="img-albumes" src="Img/Nightwish.jpg" alt="nightwish" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "nightwish"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "Decades"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -125,7 +125,7 @@
                     <img class="img-albumes" src="Img/Pantera.jpg" alt="pantera" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "pantera"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "Essentials"></i>
                 </span>
             </article>
             <article class="article-img">
@@ -133,7 +133,7 @@
                     <img class="img-albumes" src="Img/Sonata artica.jpg" alt="sonataArtica" />
                 </a>
                 <span class="estrella-album">
-                    <i class="fa-regular fa-star fa-2xl" id = "sonataArtica"></i>
+                    <i class="fa-regular fa-star fa-2xl" id = "The Collection"></i>
                 </span>
             </article>
     </section>
@@ -146,10 +146,10 @@
 
 <!-- Footer -->
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
+<script src="reusables/JS/canciones.js"></script>
 <script src="./reusables/getNombreUsuario.js"></script>
 <script src="./reusables/cerrarSession.js"></script>
 <script src="./JS/vistapantallaprincipal.js"></script>
-<script type="text/javascript" src="reusables/JS/canciones.js"></script>
 <script src="./JS/musicaSonando.js"></script>
 </body>
 </html>
