--- a/vistamisalbumes.html
+++ b/vistamisalbumes.html
@@ -53,6 +53,7 @@
 
 <!-- Footer -->
 <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%"></iframe> 
+<script src="./reusables/JS/canciones.js"></script>
 <script src="./reusables/getNombreUsuario.js"></script>
 <script src="./reusables/cerrarSession.js"></script>
 <script src="./JS/vistapantallaprincipal.js"></script>
