--- a/vistamiscancionesfavoritass.html
+++ b/vistamiscancionesfavoritass.html
@@ -29,8 +29,8 @@
                 <li><a href="vistamiscancionesfavoritass.html">Mis favoritas</a></li>
             </ul>
         </nav>
-        <section class="sectionimgbajonav">
-            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="">
+        <section class="sectionimgbajonav" id="sectionMusicaSonando">
+            <img class="imagenbajonav" src="Img/Seven spires.jpg" alt="" id ='imgNav'>
             <span class="estrella-cancion">
                 <i class="fa-regular fa-star fa-2xl" id ="sevenSpires"></i>
             </span>
@@ -45,36 +45,10 @@
             <article class="article-canciones"><strong>Album</strong></article>
             <article class="article-canciones"><strong>Duracion</strong></article>
             <article class="article-canciones"><strong>Reproduccion</strong></article>
-
-            <article class="article-canciones"><span class="play-cancion"><i class="fa-solid fa-play fa-lg"></i></span></article>
-            <article class="article-canciones">Cancion 1 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">Album 1 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">3:00</article>
-            <article class="article-canciones">1500</article>
-
-            <article class="article-canciones"><span class="play-cancion"><i class="fa-solid fa-play fa-lg"></i></span></article>
-            <article class="article-canciones">Canción 2 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">Álbum 2 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">4:15</article>
-            <article class="article-canciones">2200</article>
-
-            <article class="article-canciones"><span class="play-cancion"><i class="fa-solid fa-play fa-lg"></i></span></article>
-            <article class="article-canciones">Canción 3 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">Álbum 3 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">2:30</article>
-            <article class="article-canciones">1800</article>
-
-            <article class="article-canciones"><span class="play-cancion"><i class="fa-solid fa-play fa-lg"></i></span></article>
-            <article class="article-canciones">Canción 4 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">Álbum 4 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">3:45</article>
-            <article class="article-canciones">2100</article>
-
-            <article class="article-canciones"><span class="play-cancion"><i class="fa-solid fa-play fa-lg"></i></span></article>
-            <article class="article-canciones">Canción 5 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">Álbum 5 <span class="estrella-cancion"><i class="fa-regular fa-star fa-lg"></i></span></article>
-            <article class="article-canciones">3:45</article>
-            <article class="article-canciones">2100</article>
+        </section>
+        <section class ="cancionSonando">
+            <h2 class = "titleSonando"></h2>
+            <h1 class="albumSonando"></h1>
         </section>
         <section class="reproductor">
             <span class="play"><i class="fa-solid fa-play fa-2xl"></i></span>
@@ -85,9 +59,12 @@
     <!-- Footer -->
     <iframe src="./reusables/footer.html" frameborder="0" scrolling="no" width="100%" height="200"></iframe></body>
     <script src="https://kit.fontawesome.com/258f4c98cc.js" crossorigin="anonymous"></script>
+    <script src="./reusables/JS/canciones.js"></script>
+    <script src="./JS/musicaSonando.js"></script>
     <script src="./reusables/getNombreUsuario.js"></script>
     <script src="./reusables/cerrarSession.js"></script>
     <script src="./JS/vistapantallaprincipal.js"></script>
+    <script src="./JS/cancionesFavoritas.js"></script>
 
 </body>
 </html>
